test/bad/classes/struct01.px

class Struct def
    Int n

r = Struct()
print r.x
